--- a/index.html
+++ b/index.html
@@ -448,14 +448,11 @@
                   <a href="https://www.amazon.com/Who-Gets-What-Why-Matchmaking/dp/0544705289" target="_blank" style="text-decoration:none;color:#0078ff">
                   "Who Gets What — and Why" by Alvin Roth</a>, which explores the fascinating world of market design and matching mechanisms. I'm also deeply influenced by 
                   <a href="https://www.amazon.com/Ghosts-Schoolyard-Racism-Chicago-Schools/dp/022652602X" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Ghosts in the Schoolyard" by Eve L. Ewing</a>, which provides crucial insights into school closures and their community impact, and 
-                  <a href="https://www.amazon.com/Educational-Goods-Values-Evidence-Decision-Making/dp/022651417X/ref=sr_1_1?crid=2GSL36Q97J2PR&dib=eyJ2IjoiMSJ9.PsOvY5LD_9bGMqlnaM2NjtJd8IcbnL8STURx24obUJk.TTqPjwBluOVdK25lTHvOv8wNG64Io78gkVxoXdenfBk&dib_tag=se&keywords=Educational+Goods%22+by+Harry+Brighouse&qid=1733675489&s=books&sprefix=educational+goods+by+harry+brighouse%2Cstripbooks%2C92&sr=1-1" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Educational Goods" by Harry Brighouse</a>, which examines values and decision-making in education policy.
+                  "Ghosts in the Schoolyard" by Eve L. Ewing</a>, which provides crucial insights into school closures and their community impact.
                   
-                  Currently, I'm reading <a href="https://www.amazon.com/Power-Progress-Thousand-Year-Technology-Prosperity/dp/1541702549/ref=sr_1_1?crid=1LHUU8D81DRLY&dib=eyJ2IjoiMSJ9.nXiXLCqkv3uL4MpvqnJ11ZOUDtmZCm4C02sHZ7H4fGaMqZYhXl3HtQd8gmsNKXeYmhWipdj-PV1YUXa-p-IY91UQNWm0tCOsrvF8Xx181CwvwP9G8JDctohcRYT_wZs1GccY64XpjOC9SJvs0WkSDUtVBmi2r4d6ophcGI3O0R5CQzJHsZinr7hGGSGpWHNvT_G5g-4Ti9oze80g7fYhv5gmzS4aarwrFx1PLVNwTgs.uTz2Bg-eHU1-u110WHA6xrshe2tJrQz3ujsrppNr01k&dib_tag=se&keywords=power+and+progress&qid=1733675533&s=books&sprefix=power+and+progress%2Cstripbooks%2C113&sr=1-1" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Power and Progress" by Daron Acemoglu and Simon Johnson</a>, which explores how technological advances shape our society and economy. When taking a break from technical reading, I enjoy classic literature, particularly 
+                   When taking a break from technical reading, I enjoy classic literature, I'm currently reading 
                   <a href="https://www.amazon.com/Our-Mutual-Friend-Charles-Dickens/dp/0140434976" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Our Mutual Friend" by Charles Dickens</a>, which offers a compelling exploration of wealth, class, and social transformation.
+                  "Our Mutual Friend" by Charles Dickens</a>.
                   </p>         </p>
             </div>
           </div>
