--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                   
                    When taking a break from technical reading, I enjoy classic literature, I'm currently reading 
                   <a href="https://www.amazon.com/Our-Mutual-Friend-Charles-Dickens/dp/0140434976" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Our Mutual Friend" by Charles Dickens</a>.
+                  "Our Mutual Friend" by Charles Dickens</a>. I have a soft spot for Dickens' characters, ask me about Sydney Carton!
                   </p>         </p>
             </div>
           </div>
