--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
                   </p>
                   
                   <p class="lead">
+                    Here is my <a href="files/CV.pdf" target="_blank" style="color: #0078ff">CV</a>.
+                  </p>
+                  
+                  <p class="lead">
                     You can explore my previous work in Machine Learning, Recommender Systems, and Econometrics on my <a href="https://github.com/Natnael-Mulat" target="_blank" style="color: #0078ff">Github Page</a>.
                   </p>
                 </div>
