--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </p>
                   
                   <p class="lead">
-                    Here is my <a href="files/CV.pdf" target="_blank" style="color: #0078ff">CV</a>.
+                    Here is my <a href="files/CV.pdf" target="_blank" style="text-decoration:none;color:#0078ff"">CV</a>.
                   </p>
                   
                   <p class="lead">
