--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!-- Keep the name as is -->
-          <h1 class="intro-title mb-4">Natnael Mulat</h1>
-          <!-- Hacker-style typing effect -->
+          <h1 class="intro-title mb-4">
+            <img src="files/name-animation.svg" alt="Natnael Mulat" style="width: 100%; height: auto; max-width: 800px;">
+        </h1>
           <p class="intro-subtitle">
             <span id="text-slider" class="typed-text"></span><span class="cursor"></span>
           </p>
