--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <h5 class="title-left">About Me</h5>
                   </div>
                   <p class="lead">
-                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: #0078ff">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: #0078ff">Parag Pathak</a>, focusing on the design and implementation of equitable assignment mechanisms in education. My research interests lie at the intersection of education, labor, and social impact, where I use tools from Economics, Machine Learning, and Algorithm Design to address systemic challenges and develop solutions that bridge theoretical insights with practical applications.
+                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: #0078ff">MIT Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: #0078ff">Parag Pathak</a>, focusing on the design and implementation of equitable assignment mechanisms in education. My research interests lie at the intersection of education, labor, and social impact, where I use tools from Economics, Machine Learning, and Algorithm Design to address systemic challenges and develop solutions that bridge theoretical insights with practical applications.
                   </p>
                   
                   <p class="lead">
