--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   </p>
                   
                   <p class="lead">
-                    Previously, I interned as a Data Engineer at <a href="https://tresata.com" target="_blank" style="color: #0078ff">Tresata</a>, where I worked on large-scale data analysis problems. I also conducted research with <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: #0078ff">Dr. Mark Foley</a> on the economic impacts of delayed graduation, a project inspired by COVID-19's effects on educational outcomes. I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: #0078ff">Davidson College</a> with a background in Economics, Computer Science, and Mathematics.
+                    Previously, I interned as a Data Engineer at <a href="https://tresata.ai/company/" target="_blank" style="color: #0078ff">Tresata</a>, where I worked on large-scale data analysis problems. I also conducted research with <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: #0078ff">Dr. Mark Foley</a> on the economic impacts of delayed graduation, a project inspired by COVID-19's effects on educational outcomes. I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: #0078ff">Davidson College</a> with a background in Economics, Computer Science, and Mathematics.
                   </p>
                   
                   <p class="lead">
