--- a/index.html
+++ b/index.html
@@ -561,11 +561,14 @@
       "Data Engineer",
       "Soccer Player",
       "Computer Scientist",
+      "ML Enthusiast",
+      "Graduate Student",
       "Algorithm Explorer",
       "Knowledge Seeker",
       "Lifelong Learner",
-      "Dynamic Thinker",
-      "Future Professor"
+      "Education Enthusiast",
+      "Research-Focused Engineer",
+      "Aspiring Professor"
     ];
 
     let index = 0;
