--- a/index.html
+++ b/index.html
@@ -456,7 +456,8 @@
                   
                    When taking a break from technical reading, I enjoy classic literature, I'm currently reading 
                   <a href="https://www.amazon.com/Our-Mutual-Friend-Charles-Dickens/dp/0140434976" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Our Mutual Friend" by Charles Dickens</a>. I have a soft spot for Dickens' characters.
+                  "Our Mutual Friend" by Charles Dickens</a>. I also enjoy podcasts such as <a href="https://open.spotify.com/show/7oBSLCZFCgpdCaBjIG8mLV" target="_blank" style="text-decoration:none;color:#0078ff">
+                    "Nice White Parents"</a> among others.
                   </p>         </p>
             </div>
           </div>
