--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
               <i class="fa fa-book"></i>
             </div>
             <div class="media-body">
-              <h3 class="media-heading">Reading</h3>
+              <h3 class="media-heading">Reading/Podcast</h3>
               <p>
                 <p>
                   I enjoy reading books at the intersection of economics, education, and social change. Some of my favorite works include 
