--- a/index.html
+++ b/index.html
@@ -456,8 +456,12 @@
                   
                    When taking a break from technical reading, I enjoy classic literature, I'm currently reading 
                   <a href="https://www.amazon.com/Our-Mutual-Friend-Charles-Dickens/dp/0140434976" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Our Mutual Friend" by Charles Dickens</a>. I also enjoy podcasts such as <a href="https://open.spotify.com/show/7oBSLCZFCgpdCaBjIG8mLV" target="_blank" style="text-decoration:none;color:#0078ff">
-                    "Nice White Parents"</a> among others.
+                  "Our Mutual Friend" by Charles Dickens</a>.
+                  
+                  I also enjoy podcasts such as <a href="https://open.spotify.com/show/7oBSLCZFCgpdCaBjIG8mLV" target="_blank" style="text-decoration:none;color:#0078ff">
+                    "Nice White Parents"</a>, <a href="https://open.spotify.com/show/7Fj0XEuUQLUqoMZQdsLXqp?si=c071efac7a964b6b" target="_blank" style="text-decoration:none;color:#0078ff">
+                      "Acquired"</a>, and <a href="https://open.spotify.com/show/7iQXmUT7XGuZSzAMjoNWlX?si=267c431da6654a75" target="_blank" style="text-decoration:none;color:#0078ff">
+                        "The Diary of a CEO"</a> among others.
                   </p>         </p>
             </div>
           </div>
