--- a/index.html
+++ b/index.html
@@ -450,13 +450,13 @@
                 <p>
                   I enjoy reading books at the intersection of economics, education, and social change. Some of my favorite works include 
                   <a href="https://www.amazon.com/Who-Gets-What-Why-Matchmaking/dp/0544705289" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Who Gets What — and Why" by Alvin Roth</a>, which explores the fascinating world of market design and matching mechanisms. I'm also deeply influenced by 
+                  "Who Gets What — and Why" by Alvin Roth</a>, a compelling exploration of how markets can be designed to better serve society. I'm also deeply influenced by 
                   <a href="https://www.amazon.com/Ghosts-Schoolyard-Racism-Chicago-Schools/dp/022652602X" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Ghosts in the Schoolyard" by Eve L. Ewing</a>, which provides crucial insights into school closures and their community impact.
+                  "Ghosts in the Schoolyard" by Eve L. Ewing</a>, which provides crucial insights in how school closure policies reverberate through neighborhoods. <br>
                   
-                   When taking a break from technical reading, I enjoy classic literature, I'm currently reading 
+                  Classic novels hold a special place in my heart, and currently, I'm reading 
                   <a href="https://www.amazon.com/Our-Mutual-Friend-Charles-Dickens/dp/0140434976" target="_blank" style="text-decoration:none;color:#0078ff">
-                  "Our Mutual Friend" by Charles Dickens</a>.
+                  "Our Mutual Friend" by Charles Dickens</a>. <br>
                   
                   I also enjoy podcasts such as <a href="https://open.spotify.com/show/7oBSLCZFCgpdCaBjIG8mLV" target="_blank" style="text-decoration:none;color:#0078ff">
                     "Nice White Parents"</a>, <a href="https://open.spotify.com/show/7Fj0XEuUQLUqoMZQdsLXqp?si=c071efac7a964b6b" target="_blank" style="text-decoration:none;color:#0078ff">
